--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Hello world </h1>
+<html lang="en">
+<head>
+  <title> Title</title>
+  <link rel="stlesheet" href= "style.css">
+  </head>
+<body> 
+      <h1>Hello world </h1>
+</body>
+</html>
