--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <title> Title</title>
-  <link rel="stlesheet" href= "style.css">
+  <meta charset="UTF-8">
+  <title>Title</title>
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <link rel="stylesheet" href= "css/bootsrap.min.css">
   </head>
 <body> 
       <h1>Hello world </h1>
