--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
 <body> 
       <h1>Hello world </h1>
+  <p> Featured articles are considered to be some of the best articles Wikipedia has to offer</p>
 </body>
 </html>
