--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
       <h1>Hello world </h1>
   <p> Featured articles are considered to be some of the best articles Wikipedia has to offer
   </p>
+  <button class="btn btn-primary">atr</button>
 </body>
 </html>
