--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
  
   </head>
-<body> 
-      <h1>Hello world </h1>
+<body>
+  <header>
+    <div class="container-fluid">
+       <h1>Hello world </h1>
+    </div>
+  </header>
   <p> Featured articles are considered to be some of the best articles Wikipedia has to offer
   </p>
   <button class="btn btn-primary">atr</button>
