--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 <body>
   <header>
-    <div class="container">
+    <div class="container-fluid">
        <h1>Hello world</h1>
     </div>
   </header>
