--- a/index.html
+++ b/index.html
@@ -14,8 +14,23 @@
        <h1>Hello world</h1>
     </div>
   </header>
+  <div class="container">
+    
+  <section class="main">
+    <article>
+      <p>
+        Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild
+      </p>
+    </article>
+    <aside>
+      <p>
+        test
+      </p>
+  </section>
+    
   <p> Featured articles are considered to be some of the best articles Wikipedia has to offer
   </p>
+    </div>
   <button class="btn btn-primary">atr</button>
   <script src="https://code.jquery.com/jquery-latest.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
