--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
   <header>
     <div class="container">
-       <h1>Hello world</h1>
+       <h1>Atkinson Apartments</h1>
     </div>
   </header>
   <div class="container">
