--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <body>
   <header>
-    <div class="container">
+    <div class="container-fluid">
        <h1>Atkinson Apartments</h1>
     </div>
   </header>
