--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 <body>
   <header>
     <div class="container-fluid">
-       <h1>Atkinson Apartments</h1>
+       <h1 class="intro-lead" style="text-align:center;">Atkinson Apartments</h1>
+	    <p style="text-align:center;">Contact Us +14945194219545</p>
     </div>
   </header>
   <div class="container">
