--- a/index.html
+++ b/index.html
@@ -52,18 +52,17 @@
   <section class="main-row">
     <article class="col-md-5">
       <p>
-        Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild
-      </p>
+	      Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild
+	</p>
+
     </article>
     <aside class="col-md-5">
-      <p>
-        The Polar Express (conocida en Hispanoamérica como El expreso polar y en España como Polar Express) es una película animada con captura de movimiento, dirigida por Robert Zemeckis, distribuida por Warner Bros. Pictures y estrenada en 2004. Su trama, basada en el libro infantil El expreso polar (1985) de Chris Van Allsburg, trata sobre las aventuras de un grupo de niños a bordo del tren mágico El Expreso Polar para conocer a Papá Noel en el Polo norte durante Nochebuena.
-      </p>
+		<p>
+		Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild
+	    	</p>   
+	  </aside>
   </section>
-    
-  <p> Featured articles are considered to be some of the best articles Wikipedia has to offer
-  </p>
-    </div>
+   </div>
   <button class="btn btn-primary">atr</button>
   <script src="https://code.jquery.com/jquery-latest.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
