--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <div class="container">
     <div class="row">
     <article class="col-md-5">
-	<div class="image" style="background-image: url(images/work_1.jpg);"</div>
+	<img src="images/work_1.jpg">
       <p>
 	      Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild
 	</p>
@@ -58,7 +58,7 @@
 	    <article class="col-md-2">
 	    </article>
     <aside class="col-md-5">
-	    	<div class="image" style="image: url(images/work_1.jpg);"</div>
+	    	<img src="images/work_1.jpg">
 		<p>
 		Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild
 	    	</p>   
