--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 
 <body>
+<a name="top"></a>
   <header>
     <div class="container-fluid">
        <h1 class="intro-lead" style="text-align:center;">Atkinson Apartments</h1>
@@ -84,7 +85,7 @@
   </div>
  </div>
 	
-  <button class="btn btn-primary">atr</button>
+  <button class="btn btn-primary"> <a href="#top">TOP</a> </button>
   <script src="https://code.jquery.com/jquery-latest.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
  </body>
