--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	  </aside>
   </div>
  </div>
-<footer id="footer">
+<footer id="xd-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1 text-center">
