--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <a name="top"></a>
   <header>
     <div class="container-fluid">
-       <h1 class="intro-lead col-md-10 col-md-offset-1" style="text-align:center;">Atkinson Apartments</h1>
+       <h1 class="intro-lead" style="text-align:center;">Atkinson Apartments</h1>
 	    <p style="text-align:center;">Phone +14945194219545</p>
     </div>
   </header>
