--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
 	  </aside>
   </div>
  </div>
+	 <div class="container">
+	<article class="col-md-2">
+		</article>
+		 <article class="col-md-8">
+		 <img class="img-fluid" class="img-responsive" src="images/work_2.jpg">
+ 		     <p>
+	 	     Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia.
+			 </p>
+		</article>
+	<article class="col-md-2">
+		</article>
 <button class="btn btn-primary"> <a href="#top" style="color: white">TOP</a> </button>
 <footer id="xd-footer">
 		<div class="container">
