--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 		</article>
 	<article class="col-md-2">
 		</article>
+	</div>
 <button class="btn btn-primary"> <a href="#top" style="color: white">TOP</a> </button>
 <footer id="xd-footer">
 		<div class="container">
