--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
   </div>
  </div>
 	 <div class="container">
-	<article class="col-md-2"> 
+		 <div class="row">
+	<article class="col-md-2">
 		</article>
 		 <article class="col-md-8">
 		 <img class="img-fluid" class="img-responsive" src="images/work_2.jpg">
@@ -96,6 +97,8 @@
 	<article class="col-md-2">
 		</article>
 	</div>
+	</div>
+		 
 <button class="btn btn-primary"> <a href="#top" style="color: white">TOP</a> </button>
 <footer id="xd-footer">
 		<div class="container">
