--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <body>
 <a name="top"></a>
-  <header>
+  <header id="myHeader">
     <div class="container-fluid">
        <h1 class="intro-lead" style="text-align:center;">Atkinson Apartments</h1>
 	    <p style="text-align:center;">Phone +14945194219545</p>
