--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	<article class="col-md-2">
 		</article>
 		 <article class="col-md-8">
-		 <img class="img-fluid" class="img-responsive" src="images/apt3.jpg">
+		 <img class="img-fluid" class="img-responsive" src="images/gmaps.jpg">
  		     <p>
 	 	     Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia.
 			 </p>
