--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
 <a name="top"></a>
   <header id="myHeader">
     <div class="container-fluid">
+	    <div class="box-shadow">
        <h1 class="intro-lead" style="text-align:center;">Atkinson Apartments</h1>
 	    <p style="text-align:center;">Phone +14945194219545</p>
+	    </div>
     </div>
   </header>
 	
