--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container-fluid">
 	    
        <h1 class="intro-lead" style="text-align:center;">Atkinson Apartments</h1>
-	    <p style="text-align:center;">Phone +14945194219545</p>
+	    <p1 style="text-align:center;">Phone +14945194219545</p1>
 	  
     </div>
   </header>
@@ -111,7 +111,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1 text-center">
-					<p>Copyright xd</p>
+					<p1>Copyright xd</p1>
 				</div>
 			</div>
 		</div>
