--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container-fluid">
 	    
        <h1 class="intro-lead" style="text-align:center;">Atkinson Apartments</h1>
-	    <p1 style="text-align:center;">Phone +14945194219545</p1>
+	    <p id="1" style="text-align:center;">Phone +14945194219545</p>
 	  
     </div>
   </header>
