--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 	    <div class="box-shadow">
 	<img class="img-fluid" class="img-responsive" src="images/apt1.jpg">
 	    </div>
-      <p>
+      <p1>
 	      Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild
-	</p>
+	</p1>
     </article>
 	    <article class="col-md-2">
 	    </article>
@@ -63,9 +63,9 @@
 	    <div class="box-shadow">
 	    	<img class="img-fluid" class="img-responsive" src="images/apt2.jpg">
 	    </div>
-		<p>
+		<p1>
 		Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild
-	    	</p>   
+	    	</p1>   
 	  </aside>
   </div>
  </div>
@@ -75,9 +75,9 @@
 	    <div class="box-shadow">
 	<img class="img-fluid" class="img-responsive" src="images/apt3.jpg">
 	    </div>
-      <p>
+      <p1>
 	      Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild
-	</p>
+	</p1>
     </article>
 	    <article class="col-md-2">
 	    </article>
@@ -85,9 +85,9 @@
 	    <div class="box-shadow">
 	    	<img class="img-fluid" class="img-responsive" src="images/apt4.jpg">
 	    </div>
-		<p>
+		<p1>
 		Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild
-	    	</p>   
+	    	</p1>   
 	  </aside>
   </div>
  </div>
@@ -97,9 +97,9 @@
 		</article>
 		 <article class="col-md-8">
 		 <img class="img-fluid" class="img-responsive" src="images/gmaps.jpg">
- 		     <p>
+ 		     <p1>
 	 	     Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia.
-			 </p>
+			 </p1>
 		</article>
 	<article class="col-md-2">
 		</article>
@@ -111,7 +111,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1 text-center">
-					<p1>Copyright xd</p1>
+					<p>Copyright xd</p>
 				</div>
 			</div>
 		</div>
