--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
 		</article>
 		 <article class="col-md-8">
 		 <img class="img-fluid" class="img-responsive" src="images/gmaps.jpg">
- 		     <p1>
-	 	     Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia.
+ 		     <p1> Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia.
 			 </p1>
 		</article>
 	<article class="col-md-2">
