--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		</article>
 		 <article class="col-md-8">
 		 <img class="img-fluid" class="img-responsive" src="images/gmaps.jpg">
- 		     <p> Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia.
+ 		     <p id="c"> Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia.
 			 </p>
 		</article>
 	<article class="col-md-2">
