--- a/index.html
+++ b/index.html
@@ -119,9 +119,24 @@
 <footer id="xd-footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-10 col-md-offset-1 text-center">
+				<article class="col-md-1">
+		</article>
+						<article class="col-md-3">
+					<p id="c">Some description hereSome description hereSome description hereSome description hereSome description hereSome description hereSome description here</p>		
+					</p>
+				</article>
+				<article class="col-md-1">
+		</article>
+				<div class="col-md-2 col-md-offset-1 text-center">
 					<p>Copyright xd</p>
 				</div>
+				<article class="col-md-1">
+		</article>
+				<article class="col-md-3">
+					<p id="c">Some description hereSome description hereSome description hereSome description hereSome description hereSome description hereSome description here</p>		
+					</p>
+			<article class="col-md-1">
+		</article>
 			</div>
 		</div>
 	</footer>
