--- a/index.html
+++ b/index.html
@@ -125,12 +125,7 @@
 					<p id="c">Some description hereSome description hereSome description hereSome description hereSome description hereSome description hereSome description here</p>		
 					</p>
 				</article>
-				<article class="col-md-1">
-		</article>
-				<div class="col-md-2 col-md-offset-1 text-center">
-					<p>Copyright xd</p>
-				</div>
-				<article class="col-md-1">
+			<article class="col-md-4">
 		</article>
 				<article class="col-md-3">
 					<p id="c">Some description hereSome description hereSome description hereSome description hereSome description hereSome description hereSome description here</p>		
@@ -138,7 +133,12 @@
 			<article class="col-md-1">
 		</article>
 			</div>
+	<div class="row">
+	<div class="col-md-2 text-center">
+					<p>Copyright xd</p>
+				</div>
 		</div>
+	</div>
 	</footer>
 
   <script src="https://code.jquery.com/jquery-latest.js"></script>
