--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
 			<article class="col-md-1">
 		</article>
 			</div>
-	<div class="row">
-	<div class="col-md-2 text-center">
-					<p>Copyright xd</p>
+	
+	<div class="foot">
+					<p style="text-align:center;">Copyright xd</p>
 				</div>
-		</div>
+		
 	</div>
 	</footer>
 
