--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
 				<article class="col-md-1">
 		</article>
 						<article class="col-md-3">
-					<p id="c">Some description hereSome description hereSome description hereSome description hereSome description hereSome description hereSome description here</p>		
+					<p>Some description hereSome description hereSome description hereSome description hereSome description hereSome description hereSome description here</p>		
 					</p>
 				</article>
 			<article class="col-md-4">
 		</article>
 				<article class="col-md-3">
-					<p id="c">Some description hereSome description hereSome description hereSome description hereSome description hereSome description hereSome description here</p>		
+					<p>Some description hereSome description hereSome description hereSome description hereSome description hereSome description hereSome description here</p>		
 					</p>
 			<article class="col-md-1">
 		</article>
