--- a/index.html
+++ b/index.html
@@ -118,27 +118,11 @@
 <button class="btn btn-primary"> <a href="#top" style="color: white">TOP</a> </button>
 <footer id="xd-footer">
 		<div class="container">
-			<div class="row">
-				<article class="col-md-1">
-		</article>
-						<article class="col-md-3">
-					<p>Some description hereSome description hereSome description hereSome description hereSome description hereSome description hereSome description here</p>		
-					</p>
-				</article>
-			<article class="col-md-4">
-		</article>
-				<article class="col-md-3">
-					<p>Some description hereSome description hereSome description hereSome description hereSome description hereSome description hereSome description here</p>		
-					</p>
-			<article class="col-md-1">
-		</article>
-			</div>
+			<div class="row justify-content-center">
+		<div class="col-md-3">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
+		<div class="col-md-3 align-self-end">Copyright </div>
+		<div class="col-md-3">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
 	
-	<div class="foot">
-					<p style="text-align:center;">Copyright xd</p>
-				</div>
-		
-	</div>
 	</footer>
 
   <script src="https://code.jquery.com/jquery-latest.js"></script>
