--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		<div class="container">
 			<div class="row justify-content-center">
 		<div class="col-md-3">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
-		<div class="col-md-3 align-self-end">Copyright </div>
+		<div class="col-md-3 align-self-end text-align:center">Copyright</div>
 		<div class="col-md-3">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
 	
 	</footer>
