--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Suez+One:400,300,100,500' rel='stylesheet' type='text/css'>
 	
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
 	<link rel="stylesheet" href="css/styles.css">
 
@@ -38,95 +38,79 @@
 <body>
 <a name="top"></a>
 <div class="header">
-  <header id="myHeader">
-    <div class="container-fluid">
-	    
-       <h1 class="intro-lead" style="text-align:center;">Atkinson Apartments</h1>
-	    <p style="text-align:center;">Phone +14945194219545</p>
-	  
-    </div>
-  </header>
+	<header id="myHeader">
+   		<div class="container-fluid">
+	        	<h1 class="intro-lead" style="text-align:center;">Atkinson Apartments</h1>
+	 		<p style="text-align:center;">Phone +14945194219545</p>
+	      	</div>
+	</header>
 </div>	
 	
+
+<div class="container">
+	<div class="row">
+		<article class="col-md-1"></article>
+	        <article class="col-md-4">
+	   		<div class="box-shadow">
+				<img class="img-fluid" class="img-responsive" src="images/apt1.jpg">
+	    		</div>
+     			<p id="c">Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild</p>
+    		</article>
+		<article class="col-md-2"></article>
+    		<aside class="col-md-4">
+	    		<div class="box-shadow">
+	    			<img class="img-fluid" class="img-responsive" src="images/apt2.jpg">
+	    		</div>
+			<p id="c">Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild</p>   
+	 	</aside>
+	    <article class="col-md-1"></article>
+ 	</div>
+</div>
 	
-  <div class="container">
-    <div class="row">
-	    <article class="col-md-1">
-	    </article>
-    <article class="col-md-4">
-	    <div class="box-shadow">
-	<img class="img-fluid" class="img-responsive" src="images/apt1.jpg">
-	    </div>
-      <p id="c">
-	      Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild
-	</p>
-    </article>
-	    <article class="col-md-2">
-	    </article>
-    <aside class="col-md-4">
-	    <div class="box-shadow">
-	    	<img class="img-fluid" class="img-responsive" src="images/apt2.jpg">
-	    </div>
-		<p id="c">
-		Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild
-	    	</p>   
-	  </aside>
-	    <article class="col-md-1">
-	    </article>
-  </div>
- </div>
-	  <div class="container">
-    <div class="row">
-	    <article class="col-md-1">
-	    </article>
-    <article class="col-md-4">
-	    <div class="box-shadow">
-	<img class="img-fluid" class="img-responsive" src="images/apt3.jpg">
-	    </div>
-      <p id="c">
-	      Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild
-	</p>
-    </article>
-	    <article class="col-md-2">
-	    </article>
-    <aside class="col-md-4">
-	    <div class="box-shadow">
-	    	<img class="img-fluid" class="img-responsive" src="images/apt4.jpg">
-	    </div>
-		<p id="c">
-		Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild
-	    	</p>   
-	  </aside>
-	    <article class="col-md-1">
-	    </article>
-  </div>
- </div>
-	 <div class="container">
-		 <div class="row">
-	<article class="col-md-2">
+<div class="container">
+	<div class="row">
+		<article class="col-md-1"></article>	    	
+   		<article class="col-md-4">
+	    		<div class="box-shadow">
+				<img class="img-fluid" class="img-responsive" src="images/apt3.jpg">
+	   		 </div>
+      			<p id="c">Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild</p>
+    		</article>
+	    	<article class="col-md-2"></article>
+    		<aside class="col-md-4">
+	   		<div class="box-shadow">
+	    			<img class="img-fluid" class="img-responsive" src="images/apt4.jpg">
+	   		 </div>
+			 <p id="c">Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild</p>   
+	  	</aside>
+	    	<article class="col-md-1"></article>
+  	</div>
+</div>
+	
+<div class="container">
+	<div class="row">
+		<article class="col-md-2"></article>
+		<article class="col-md-8">
+		 	<img class="img-fluid" class="img-responsive" src="images/gmaps.jpg">
+ 		     	<p id="c"> Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia.</p>
 		</article>
-		 <article class="col-md-8">
-		 <img class="img-fluid" class="img-responsive" src="images/gmaps.jpg">
- 		     <p id="c"> Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia.
-			 </p>
-		</article>
-	<article class="col-md-2">
-		</article>
+	<article class="col-md-2"></article>
 	</div>
-	</div>
+</div>
 		 
 <button class="btn btn-primary"> <a href="#top" style="color: white">TOP</a> </button>
 <footer id="xd-footer">
 		<div class="container">
 			<div class="row justify-content-center">
-		<div class="col-md-3">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
+				<div class="col-md-3">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
 				<div class="col-md-3 align-self-end" style="text-align:center;">Copyright</div>
-		<div class="col-md-3">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
-	
-	</footer>
+				<div class="col-md-3">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
+			</div>
+		</div>
+</footer>
 
-  <script src="https://code.jquery.com/jquery-latest.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-latest.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
  
 <script>
 window.onscroll = function() {myFunction()};
