--- a/index.html
+++ b/index.html
@@ -34,70 +34,72 @@
 	<link rel="stylesheet" href="css/styles.css">
 
 </head>
-
-<body>
-<a name="top"></a>
-<div class="header">
-	<header id="myHeader">
-   		<div class="container-fluid">
-	        	<h1 class="intro-lead" style="text-align:center;">Atkinson Apartments</h1>
-	 		<p style="text-align:center;">Phone +14945194219545</p>
-	      	</div>
-	</header>
-</div>	
+<div class="main">
+	<body>
+	<a name="top"></a>
+	<div class="header">
+		<header id="myHeader">
+   			<div class="container-fluid">
+				<h1 class="intro-lead" style="text-align:center;">Atkinson Apartments</h1>
+	 			<p style="text-align:center;">Phone +14945194219545</p>
+	    	  	</div>
+		</header>
+	</div>	
 	
 
-<div class="container">
-	<div class="row">
-		<article class="col-md-1"></article>
-	        <article class="col-md-4">
-	   		<div class="box-shadow">
+	<div class="container">
+		<div class="row">
+			<article class="col-md-1"></article>
+	     		<article class="col-md-4">
+	   			<div class="box-shadow">
 				<img class="img-fluid" class="img-responsive" src="images/apt1.jpg">
-	    		</div>
-     			<p id="c">Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild</p>
-    		</article>
-		<article class="col-md-2"></article>
-    		<aside class="col-md-4">
-	    		<div class="box-shadow">
-	    			<img class="img-fluid" class="img-responsive" src="images/apt2.jpg">
-	    		</div>
-			<p id="c">Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild</p>   
-	 	</aside>
-	    <article class="col-md-1"></article>
- 	</div>
-</div>
-	
-<div class="container">
-	<div class="row">
-		<article class="col-md-1"></article>	    	
-   		<article class="col-md-4">
-	    		<div class="box-shadow">
-				<img class="img-fluid" class="img-responsive" src="images/apt3.jpg">
-	   		 </div>
-      			<p id="c">Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild</p>
-    		</article>
-	    	<article class="col-md-2"></article>
-    		<aside class="col-md-4">
-	   		<div class="box-shadow">
-	    			<img class="img-fluid" class="img-responsive" src="images/apt4.jpg">
-	   		 </div>
-			 <p id="c">Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild</p>   
-	  	</aside>
+	    			</div>
+     				<p id="c">Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild</p>
+    			</article>
+			<article class="col-md-2"></article>
+    			<aside class="col-md-4">
+	    			<div class="box-shadow">
+	    				<img class="img-fluid" class="img-responsive" src="images/apt2.jpg">
+	    			</div>
+				<p id="c">Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild</p>   
+	 		</aside>
 	    	<article class="col-md-1"></article>
-  	</div>
-</div>
-	
-<div class="container">
-	<div class="row">
-		<article class="col-md-2"></article>
-		<article class="col-md-8">
-		 	<img class="img-fluid" class="img-responsive" src="images/gmaps.jpg">
- 		     	<p id="c"> Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia.</p>
-		</article>
-	<article class="col-md-2"></article>
+ 		</div>
 	</div>
-</div>
-		 
+	
+	<div class="container">
+		<div class="row">
+			<article class="col-md-1"></article>	    	
+   			<article class="col-md-4">
+	    			<div class="box-shadow">
+					<img class="img-fluid" class="img-responsive" src="images/apt3.jpg">
+	   			 </div>
+      				<p id="c">Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild</p>
+    			</article>
+	    		<article class="col-md-2"></article>
+    			<aside class="col-md-4">
+	   			<div class="box-shadow">
+	    				<img class="img-fluid" class="img-responsive" src="images/apt4.jpg">
+	   			 </div>
+				 <p id="c">Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild</p>   
+	  		</aside>
+	    		<article class="col-md-1"></article>
+  		</div>
+	</div>
+	
+	<div class="container">
+		<div class="row">
+			<article class="col-md-2"></article>
+			<article class="col-md-8">
+		 		<img class="img-fluid" class="img-responsive" src="images/gmaps.jpg">
+ 		     		<p id="c"> Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia.</p>
+			</article>
+		<article class="col-md-2"></article>
+		</div>
+	</div>
+</div> 
+
+
 <button class="btn btn-primary"> <a href="#top" style="color: white">TOP</a> </button>
 <footer id="xd-footer">
 		<div class="container">
