--- a/index.html
+++ b/index.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Atkinson Apartments</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Atkinson Apartments" />
-	<meta name="keywords" content="Atkinson, Apartments" />
+	<div class="head">
+		<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>Atkinson Apartments</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Atkinson Apartments" />
+		<meta name="keywords" content="Atkinson, Apartments" />
 	
 
-  <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+  		<!-- Facebook and Twitter integration -->
+		<meta property="og:title" content=""/>
+		<meta property="og:image" content=""/>
+		<meta property="og:url" content=""/>
+		<meta property="og:site_name" content=""/>
+		<meta property="og:description" content=""/>
+		<meta name="twitter:title" content="" />
+		<meta name="twitter:image" content="" />
+		<meta name="twitter:url" content="" />
+		<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+		<link rel="shortcut icon" href="favicon.ico">
 
-	<!-- Google Webfonts -->
+		<!-- Google Webfonts -->
 		
-	<link href='https://fonts.googleapis.com/css?family=Suez+One:400,300,100,500' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Suez+One:400,300,100,500' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Suez+One:400,300,100,500' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Suez+One:400,300,100,500' rel='stylesheet' type='text/css'>
 	
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-	<link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" href="css/styles.css">
 
-</head>
+	</head>
+</div>		
+		
 <div class="main">
 	<body>
 	<a name="top"></a>
