--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 <footer id="xd-footer">
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-md-3">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
-				<div class="col-md-3 align-self-end" style="text-align:center;">Copyright</div>
-				<div class="col-md-3">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
+				<div class="col-3">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
+				<div class="col-3 align-self-end" style="text-align:center;">Copyright</div>
+				<div class="col-3">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
 			</div>
 		</div>
 </footer>
