--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 <button class="btn btn-primary"> <a href="#top" style="color: white">TOP</a> </button>
 <footer id="xd-footer">
 		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-4">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
-				<div class="col-4 align-self-end" style="text-align:center;">Copyright</div>
-				<div class="col-4">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
+			<div class="row justify-content-between">
+				<div class="col-2">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
+				<div class="col-2 align-self-end" style="text-align:center;">Copyright</div>
+				<div class="col-2">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
 			</div>
 		</div>
 </footer>
