--- a/index.html
+++ b/index.html
@@ -107,10 +107,14 @@
 <footer id="xd-footer">
 		<div class="container">
 			<div class="row justify-content-between">
-				<div class="col-2">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
-				<div class="col-2 align-self-end" style="text-align:center;">Copyright</div>
-				<div class="col-2">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
+				<div class="col-md-2">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
+				<div class="col-md-2">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
 			</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-2 align-self-end" style="text-align:center;">Copyright</div>
+				</div>
 		</div>
 </footer>
 
