--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			</div>
 		</div>
 		<div class="container">
-			<div class="row">
+			<div class="row justify-content-center">
 				<div class="col-2 align-self-end" style="text-align:center;">Copyright</div>
 				</div>
 		</div>
